# skin_cancer

./: README.md  pyproject.toml  requirements.txt  run_extract_features.py  run_train_model.py
src/skin_lesion/: __init__.py
src/skin_lesion/cli/: extract_features.py  train_model.py
src/skin_lesion/config/: config.py
src/skin_lesion/dataset/: features.py  paths.py  sample.py
src/skin_lesion/features/: batch.py  extract.py  geometry.py  io.py  texture.py
src/skin_lesion/preprocessing/: io.py  resize.py  verify.py
src/skin_lesion/training/: build.py  evaluate.py  io.py  loop.py  model.py  split.py
tests/: conftest.py  test_io.py  test_resize.py  test_verify.py
