[project]
name = "skin-lesion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "juank020505", email = "jkamiloeche@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]

[project.scripts]
skin-lesion = "skin_lesion:main"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
